src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <description>ApplicationType for phone registration</description>
        <inlineHelpText>ApplicationType for phone registration</inlineHelpText>
        <label>ApplicationType</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birthdate_second_contact__c</fullName>
        <description>Birthdate_second_contact</description>
        <inlineHelpText>Birthdate_second_contact</inlineHelpText>
        <label>Birthdate_second_contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Gold Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester CD office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moorgate HO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moorgate HO - 3111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - ES4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain - Mallorca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TorFX - Penzance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_of_interest__c</fullName>
        <description>Country of interest for transaction</description>
        <inlineHelpText>Country of interest for transaction</inlineHelpText>
        <label>Country of interest</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CratedBy__c</fullName>
        <formula>CreatedBy.FirstName+&apos; &apos;+CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CratedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_second_contact__c</fullName>
        <description>Email_second_contact</description>
        <inlineHelpText>Email_second_contact</inlineHelpText>
        <label>Email_second_contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <formula>LastModifiedBy.FirstName+&quot; &quot;+ LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_number__c</fullName>
        <description>Lead numbers to be used in round robin</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>Lead numbers to be used in round robin</inlineHelpText>
        <label>Lead_number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_second_contact__c</fullName>
        <description>Phone_second_contact</description>
        <inlineHelpText>Phone_second_contact</inlineHelpText>
        <label>Phone_second_contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Id__c</fullName>
        <formula>MOD(  VALUE( Lead_number__c ) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round_Robin_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_second_contact__c</fullName>
        <label>Salutation_second_contact</label>
        <picklist>
            <picklistValues>
                <fullName>Adv.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Er.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>God.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hon.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/s.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_contact_FirstName__c</fullName>
        <description>Second_contact_FirstName</description>
        <inlineHelpText>Second_contact_FirstName</inlineHelpText>
        <label>Second_contact_FirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_contact_LastName__c</fullName>
        <description>Second_contact_LastName</description>
        <inlineHelpText>Second_contact_LastName</inlineHelpText>
        <label>Second_contact_LastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>birthdate__c</fullName>
        <description>birthdate</description>
        <inlineHelpText>birthdate</inlineHelpText>
        <label>birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>Type of the lead</description>
        <inlineHelpText>Type of the lead</inlineHelpText>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>FranceLeadQ_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>FranceLeadQ</label>
        <queue>FranceLeadQ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MumbaiLeadQ_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>MumbaiLeadQ</label>
        <queue>MumbaiLeadQ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Purge_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Purge Queue</label>
        <queue>Purge_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Email_field_should_not_be_blanked</fullName>
        <active>true</active>
        <description>Email field should not be blanked</description>
        <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Email should not be blanked</errorMessage>
    </validationRules>
</CustomObject>